2.0.12:
- New profile config option to change the default base liquid to use while generating the world ('liquidBlock')

2.0.11:
- Log an error if we detect that a block's TileEntity is wrong

2.0.10:
- Removed some spam from the console

2.0.9:
- Fixed a crash bug in combination with the Aroma Mining Dimension

2.0.8:
- Added support for multiple Lost City dimensions through the new ADDITIONAL_DIMENSIONS config. These dimensions are not accessible with the usual method. They are mostly intended for pack devs who need multiple city dimensions with various properties (profiles)