@@ -187,13 +187,15 @@ public class LostCityChunkGenerator implements IChunkGenerator, ILostChunkGenera
         if (cachedHeightmaps.containsKey(key)) {
             return cachedHeightmaps.get(key);
         } else if (cachedPrimers.containsKey(key)) {
-            ChunkHeightmap heightmap = new ChunkHeightmap(cachedPrimers.get(key), profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL);
+            char baseChar = (char) Block.BLOCK_STATE_IDS.get(profile.getBaseBlock());
+            ChunkHeightmap heightmap = new ChunkHeightmap(cachedPrimers.get(key), profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL, baseChar);
             cachedHeightmaps.put(key, heightmap);
             return heightmap;
         } else {
             ChunkPrimer primer = generatePrimer(chunkX, chunkZ);
             cachedPrimers.put(key, primer);
-            ChunkHeightmap heightmap = new ChunkHeightmap(cachedPrimers.get(key), profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL);
+            char baseChar = (char) Block.BLOCK_STATE_IDS.get(profile.getBaseBlock());
+            ChunkHeightmap heightmap = new ChunkHeightmap(cachedPrimers.get(key), profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL, baseChar);
             cachedHeightmaps.put(key, heightmap);
             return heightmap;
         }
@@ -296,7 +298,8 @@ public class LostCityChunkGenerator implements IChunkGenerator, ILostChunkGenera
             // Calculate the chunk heightmap in case we need it later
             if (!cachedHeightmaps.containsKey(key)) {
                 // We might need this later
-                cachedHeightmaps.put(key, new ChunkHeightmap(chunkprimer, profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL));
+                char baseChar = (char) Block.BLOCK_STATE_IDS.get(profile.getBaseBlock());
+                cachedHeightmaps.put(key, new ChunkHeightmap(chunkprimer, profile.LANDSCAPE_TYPE, profile.GROUNDLEVEL, baseChar));
             }
         }
         return chunkprimer;
